:lipstick: Fixed spacing on end cards

--- a/src/main/resources/styles/postgame.css
+++ b/src/main/resources/styles/postgame.css
@@ -37,4 +37,5 @@
 
 .cards-hbox-holder {
     -fx-background-color: blue;
+    -fx-spacing: -90px;
 }
